--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,18 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-messaging.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-functions.js"></script> -->
     <script>
       // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyDpHTCQDVxNdpxZuS59gfB8eKootKtZUTs",
-        authDomain: "wangrecordcai.firebaseapp.com",
-        databaseURL: "https://wangrecordcai.firebaseio.com",
-        projectId: "wangrecordcai",
-        storageBucket: "wangrecordcai.appspot.com",
-        messagingSenderId: "851357556872"
-      };
-      firebase.initializeApp(config);
+     
     </script>
   </head>
   <body>
