--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,21 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Client</title>
-    <base href="./" />
-
+    <!-- <base href="./" /> -->
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script> -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-messaging.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-functions.js"></script> -->
-    <script>
-      // Initialize Firebase
-     
-    </script>
   </head>
   <body>
     <app-root></app-root>
